# advent25

./: Cargo.toml
src/: lib.rs
