[package]
name = "advent_code_25"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "secret_entrance"
path = "src/bin/secret_entrance/secret_entrance.rs"

[[bin]]
name = "gift_shop"
path = "src/bin/gift_shop/gift_shop.rs"

[[bin]]
name = "lobby"
path = "src/bin/lobby/lobby.rs"

[[bin]]
name = "printing_department"
path = "src/bin/printing_department/printing_department.rs"

[dependencies]
anyhow = "1.0"
indoc = "2.0.7"
